2002-03-21  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-formula-guru.c (dialog_formula_guru_init) : use 
	  gnumeric_cell_renderer_expr_entry_new rather than 
	  gtk_cell_renderer_text_new for editable column

2002-03-21  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* dialog-about.c (dialog_about): Added the authors of the LP Solve
	algorithm.

2002-03-21  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-formula-guru.c : support `rolling-up' of the window
	  to make Jon-Kare happy
	* formula-guru.glade : ditto
	
2002-03-20  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-formula-guru.c : handle existing function calls 

2002-03-20  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* dialog-solver.c (solver_reporting): Added check if max
	iterations was exceeded.

2002-03-20  Andreas J. Guelzow <aguelzow@taliesin.ca>
	
	* dialog-formula-guru.c : enable `okay'	

2002-03-19  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-formula-guru.c : rewritten
	* dialog-function-select.c : rewritten
	* formula-guru.glade : rewritten
	* function-select.glade : rewritten
	* dialogs.h (dialog_formula_guru) : change argument
	(dialog_function_select) : change argument and return type

2002-03-19  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.glade : Improved label.

	* dialogs-solver.c : QP related changes.

2002-03-18  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/dialogs/goto.glade : removed navigator part
	* dialog-goto-cell.c : 	removed navigator

2002-03-18  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.glade : Added a button for quadratic programming.

	* dialog-solver.c : Handle LP, QP radio buttons.

2002-03-17  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/dialogs/goto.glade : new
	* dialog-goto-cell.c : ported to gnome2, made into guru and 
	  redesigned. The navigator is not implemented.

2002-03-17  Jody Goldberg <jody@gnome.org>

	* dialog-cell-format.c (fmt_dialog_init_font_page) : fix underline